add nodes alloc info
